# FeiFeiLe

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: release.yml
feifeile/: __init__.py  auth.py  cli.py  config.py  flight.py  monitor.py  notifier.py  scheduler.py
tests/: test_auth.py  test_cli.py  test_config.py  test_flight.py  test_monitor.py  test_notifier.py  test_scheduler.py
